fixed some of the mobile overflow problems

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@ body {
   background-repeat: repeat;
   background-size: 500px;
   max-width: 100vw;
+  overflow-x: hidden;
+  position: relative;
+  height: auto;
 }
 
 .lock {
